--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.19",
     "formik": "^2.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-input-range": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
