--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.19",
-    "formik": "^2.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-input-range": "^1.3.0",
@@ -26,8 +25,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.11"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
